--- a/etc/NEWS
+++ b/etc/NEWS
@@ -925,10 +925,11 @@ a match if part of it has a read-only property.
 `replace-regexp' allow \,expr to be used in a replacement string,
 where expr is an arbitrary Lisp expression evaluated at replacement
 time.  In many cases, this will be more convenient than using
-`query-replace-regexp-eval'.  All regular expression replacement
-commands now allow `\?' in the replacement string to specify a
-position where the replacement string can be edited for each
-replacement.
+`query-replace-regexp-eval'.  `\#' in a replacement string now refers
+to the count of replacements already made by the replacement command.
+All regular expression replacement commands now allow `\?' in the
+replacement string to specify a position where the replacement string
+can be edited for each replacement.
 
 +++
 ** Emacs normally highlights mouse sensitive text whenever the mouse
@@ -1085,6 +1086,16 @@ to new-kill-line, these commands now report:
 making the decision in a heuristic way.  This new job is done by the
 command `isearch-yank-word-or-char'.  To restore the old behavior,
 bind C-w to `isearch-yank-word' in `isearch-mode-map'.
+
++++
+** C-M-w deletes and C-M-y grabs a character in isearch mode.
+Another method to grab a character is to enter the minibuffer by `M-e'
+and to type `C-f' at the end of the search string in the minibuffer.
+
++++
+** M-% and C-M-% typed in isearch mode invoke `query-replace' and
+`query-replace-regexp' with the current search string inserted
+in the minibuffer as initial input for the string to replace.
 
 +++
 ** Yanking text now discards certain text properties that can
