--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-01  David Kastrup  <dak@gnu.org>
+
+	* quail/greek.el ("((") ("))"): add quotation mark shorthands.
+
 2004-06-30  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in (${CHINESE-TIT:.elc=.el}): Depend on changed.tit to
