--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-02  Richard M. Stallman  <rms@gnu.org>
+
+	* replace.el (query-replace-read-args): Swallow space after
+	symbols, not after closeparens.  But avoid error if string ends there.
+
+	* progmodes/python.el (python-beginning-of-statement):
+	Exit the loop if backward-up-list gets error.
+
+	* textmodes/enriched.el (enriched-encode): Bind inhibit-read-only.
+
 2004-07-02  Andre Spiegel  <spiegel@gnu.org>
 
 	* vc-rcs.el (vc-rcs-checkout-model): Look at the version headers
@@ -44,6 +54,11 @@
 	everything except )]" which in most cases means after a symbol.
 
 	* emacs-lisp/pp.el (pp-buffer): Add autoload.
+
+2004-06-28  Richard M. Stallman  <rms@gnu.org>
+
+	* font-lock.el (font-lock-fontify-syntactic-keywords-region):
+	More changes to go with previous change in font-lock.el.
 
 2004-06-26  David Kastrup  <dak@gnu.org>
 
