--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-02  Richard M. Stallman  <rms@gnu.org>
+
+	* files.texi (Saving Buffers): Cleanup write-contents-function.
+	(Magic File Names): Cleanup file-remote-p.
+
 2004-07-02  Kai Grossjohann  <kai@emptydomain.de>
 
 	* files.texi (Magic File Names): `file-remote-p' returns an
