--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-05  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (install-arch-indep): Remove .arch-inventory files.
+
 2004-06-21  Kenichi Handa  <handa@m17n.org>
 
 	* make-dist: Link leim-ext.el into tempdir.
