--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-06  John Paul Wallington  <jpw@gnu.org>
+
+	* eval.c (Fdefmacro): Signal an error if NAME is not a symbol.
+
 2004-07-05  Jan Dj,Ad(Brv  <jan.h.d@swipnet.se>
 
 	* macterm.c (mac_initialize_display_info): Use CGGetActiveDisplayList
