--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-08  Steven Tamm  <steventamm@mac.com>
+
+	* term/mac-win.el (mac-scroll-ignore-events, mac-scroll-down)
+	(mac-scroll-down-line, mac-scroll-up, mac-scroll-up-line):
+	Do not treat double clicks and triple clicks specially in the
+	scroll bar (preventing strange repositioning problems)
+
 2004-07-06  Stefan  <monnier@iro.umontreal.ca>
 
 	* replace.el (query-replace-regexp-eval): Fix last change.
