--- a/etc/NEWS
+++ b/etc/NEWS
@@ -2179,7 +2179,10 @@ configuration files.
 * Lisp Changes in Emacs 21.4
 
 ** If a command sets transient-mark-mode to `only', that 
-enables Transient Mark mode for the following command, only.
+enables Transient Mark mode for the following command only.
+During that following command, the value of transient-mark-mode
+is `identity'.  If it is still `identity' at the end of the command,
+it changes to nil.
 
 +++
 ** Cleaner way to enter key sequences.
