--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,7 +1,8 @@
 2004-07-10  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* window.el (save-selected-window, one-window-p)
-	(split-window-keep-point, split-window-horizontally): Doc fixes.
+	(split-window-keep-point, split-window-vertically)
+	(split-window-horizontally): Doc fixes.
 
 2004-07-10  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
