--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2004-07-10  Luc Teirlinck  <teirllm@auburn.edu>
 
+	* files.el (switch-to-buffer-other-window): Doc fix.
+
 	* window.el (save-selected-window, one-window-p)
 	(split-window-keep-point, split-window-vertically)
 	(split-window-horizontally): Doc fixes.
