--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-07-10  Luc Teirlinck  <teirllm@auburn.edu>
 
+	* buffer.c (Fswitch_to_buffer, Fpop_to_buffer): Doc fixes.
+
 	* window.c (Fwindow_buffer, Fother_window,  Fget_lru_window)
 	(Fget_largest_window, Fget_buffer_window, Fdelete_windows_on)
 	(Freplace_buffer_in_windows, Fset_window_buffer)
