--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-11  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* subr.el (get-buffer-window-list): Doc fix.
+
 2004-07-10  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* files.el (switch-to-buffer-other-window): Doc fix.
